Добавлены транзакции
