# app/Models/Accounting/Transaction.php
@@ -1,0 +1,33 @@
+<?php
+
+namespace App\Models\Accounting;
+
+use App\Models\User;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Transaction extends Model
+{
+    use HasFactory;
+
+    const INCOME_TYPE = 'income';
+    const OUTCOME_TYPE = 'outcome';
+
+    protected $fillable = [
+        'id',
+        'description',
+        'type',
+        'amount',
+        'category_id',
+        'user_id'
+    ];
+
+    public function category(): \Illuminate\Database\Eloquent\Relations\BelongsTo
+    {
+        return $this->belongsTo(Category::class);
+    }
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+}
