# storage/api-docs/api-docs.json
@@ -371,6 +371,309 @@
                 ]
             }
         },
+        "/api/transaction": {
+            "get": {
+                "tags": [
+                    "Транзакции"
+                ],
+                "summary": "Получить список Транзакций",
+                "description": "Вернет список Транзакций",
+                "operationId": "e97661b0e303c26469ee051ab6da2538",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "transactions": {
+                                            "type": "array",
+                                            "items": {},
+                                            "example": [
+                                                {
+                                                    "id": 1,
+                                                    "description": "Fanger",
+                                                    "amount": 12312,
+                                                    "type": "income",
+                                                    "user": {
+                                                        "email": "test@test.ru",
+                                                        "name": "test",
+                                                        "id": 1
+                                                    },
+                                                    "category": {
+                                                        "id": 1,
+                                                        "name": "test",
+                                                        "limit": 2323124
+                                                    }
+                                                },
+                                                {
+                                                    "id": 2,
+                                                    "description": "Fanger",
+                                                    "amount": 12312,
+                                                    "type": "income",
+                                                    "user": {
+                                                        "email": "test@test.ru",
+                                                        "name": "test",
+                                                        "id": 1
+                                                    },
+                                                    "category": {
+                                                        "id": 1,
+                                                        "name": "test",
+                                                        "limit": 2323124
+                                                    }
+                                                }
+                                            ]
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/api/transaction/{transaction_id}": {
+            "get": {
+                "tags": [
+                    "Транзакции"
+                ],
+                "summary": "Получить Транзакцию по id",
+                "description": "Вернет Транзакцию по id",
+                "operationId": "a7f5bb51cd4b9724dcbf67a4f8ff86ac",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID Транзакции",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "description": {
+                                            "type": "string",
+                                            "example": "test"
+                                        },
+                                        "type": {
+                                            "type": "string",
+                                            "example": "outcome"
+                                        },
+                                        "amount": {
+                                            "type": "integer",
+                                            "example": 123
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/api/transaction/add": {
+            "post": {
+                "tags": [
+                    "Транзакции"
+                ],
+                "summary": "Добавить Транзакцию",
+                "description": "Нужно передать все поля",
+                "operationId": "8a733794b2df0ddb7837f2c1b763821c",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "description",
+                                    "type",
+                                    "amount",
+                                    "category_id"
+                                ],
+                                "properties": {
+                                    "description": {
+                                        "type": "string",
+                                        "example": "test"
+                                    },
+                                    "type": {
+                                        "type": "string",
+                                        "example": "income"
+                                    },
+                                    "amount": {
+                                        "type": "integer",
+                                        "example": 65.21
+                                    },
+                                    "category_id": {
+                                        "type": "integer",
+                                        "example": 2
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "422": {
+                        "description": "Вернет ошибку валидации, если поля не валидны или какие-то не отправлены"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/api/transaction/update/{transaction_id}": {
+            "put": {
+                "tags": [
+                    "Транзакции"
+                ],
+                "summary": "Обновить Транзакцию",
+                "description": "Нужно передать все поля",
+                "operationId": "487390f743cf1f3992e900ac7e93eea6",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "description",
+                                    "type",
+                                    "amount",
+                                    "category_id"
+                                ],
+                                "properties": {
+                                    "description": {
+                                        "type": "string",
+                                        "example": "test"
+                                    },
+                                    "type": {
+                                        "type": "string",
+                                        "example": "income"
+                                    },
+                                    "amount": {
+                                        "type": "integer",
+                                        "example": 65.21
+                                    },
+                                    "category_id": {
+                                        "type": "integer",
+                                        "example": 2
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "422": {
+                        "description": "Вернет ошибку валидации, если поля не валидны или какие-то не отправлены"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/api/transaction/delete/{transaction_id}": {
+            "delete": {
+                "tags": [
+                    "Транзакции"
+                ],
+                "summary": "Удалить Транзакцию по id",
+                "description": "Вернет булевое значение",
+                "operationId": "f2ccc6eba813f897f1d6140910b02936",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID категории",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        },
+                        "example": "1"
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
         "/api/auth/register": {
             "post": {
                 "tags": [
